garde/tests/ui/compile-fail/length_bad_equal_combined_min_max.stderr
error: no `min` or `max` allowed if using `equal`
 --> tests/ui/compile-fail/length_bad_equal_combined_min_max.rs
  |
  |     #[garde(length(min = 1, max = 1, equal = 10))]
  |                    ^^^
